--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <meta charset="UTF-8">
 <title>index</title>
 <link href="style.css" rel="stylesheet" type="text/css">
+<script src="watesigma.js" type="text/javascript"></script>
 </head>
 
 <body>
 	
 	<div id="bovenbalk">
 		
-		<div class="text">TOP 3 MENSEN</div>
+		<div onClick="evil()" id="text">TOP 3 MENSEN</div>
 	
 	</div>
 	
