--- a/index.html
+++ b/index.html
@@ -2,27 +2,55 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>index</title>
 <link href="style.css" rel="stylesheet" type="text/css">
 <script src="watesigma.js" type="text/javascript"></script>
 </head>
 
 <body>
-
-	<div id="bovenbalk">
-		
-		<div onClick="evil()" id="text">TOP 3 MENSEN</div>
 	
+	<div class="row">
+		
+		<div class="col-12" id="bovenbalk">
+			
+		<div onClick="evil()" id="text">TOP 3 MENSEN</div>
+
+	</div>
+		
 	</div>
 	
 	<div class="content">
-	
-		<div class="koptext">1: MINI FERRE (KIKKER T-SHIRT)</div>
-		<img id="miniferre1" src="mini_ferre_1.jpg">
-		<div class="koptext">2: LOUIS DONCK</div>
-		<img id="louis" src="louis.jpeg">
-		<div class="koptext">3: JOHAN AMERLYNCK</div>
-		<img id="johan" src="johan.jpg">
+		
+		<div class="row"> 
+		<div class="col-12" id="grayonmobile"> 
+			
+		<div class="row"> 
+			<div class="col-6"> 
+				<div class="koptext">1: MINI FERRE (KIKKER T-SHIRT)</div>
+				<img id="miniferre1" src="mini_ferre_1.jpg">
+			</div>
+
+			<div class="col-6" id="lightgrayonmobile">
+				<div class="koptext">2: LOUIS DONCK</div>
+				<img id="louis" src="louis.jpeg">
+			</div>
+		</div>
+		
+		<div class="row">
+			<div class="col-12"> 
+				<div class="koptext">3: JOHAN AMERLYNCK</div>
+			</div>
+		</div>
+		
+		<div class="row">
+			<div class="col-12"> 
+				<img id="johan" src="johan.jpg">
+			</div>
+		</div>
+		
+	</div>
+		</div>
 	</div>
 	
 </body>
